--- a/13.html
+++ b/13.html
@@ -36,16 +36,12 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Anh đừng quá lo lắng về những điều phía trước vì sẽ luôn có em ở đằng sau. 
-                Em sẽ luôn ở bên cạnh anh và ủng hộ tất cả những điều anh làm trong cuộc sống. 
-                Em không muốn mình là ưu tiên của anh, em chỉ muốn được là người ở bên cạnh và đồng hành cùng anh trong suốt chặng hành trình này. 
-                Em iu anh 💗🐿️</p>
+            <p id="letter">(9697: mkhoa 3): Con yêu bà nhiều lắm ạ, bà là người con yêu quý nhất trong nhà mong bà ngày quốc tế phụ nữ thật nhiều sức khoẻ, hạnh phúc ạ/p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">"- Chúng mình đã ở bên nhau hơn 2 năm
-            - Kỉ niệm đáng nhớ nhất là lần đầu chúng mình gặp nhau sau 4 tháng chia tay
-            - Trong tương lai mình muốn chúng mình sẽ bên nhau thật lâu dài 💗" </p>
+        <p class="spotify">"9697: Gửi người phụ nữ của gia đình con iu🥰🥰. 
+" </p>
     </template>
 </body>
 
