--- a/14.html
+++ b/14.html
@@ -47,5 +47,5 @@
     </template>
     <img id="ảnh" src="https://drive.google.com/file/d/1uV2-uZybBlH1GqpeDTSAqk28j-CRrcIm/view">
 </body>
-
+<img> https://drive.google.com/file/d/1SsE7O5Ys1IBOwSnkWTtJJkMvveS8m9Ns/view?usp=sharing
 </html>
