--- a/12.html
+++ b/12.html
@@ -43,5 +43,5 @@
         <p class="spotify">9696( đơn thứ 2): Quý lắm t mới tặng nhé😏</p>
     </template>
 </body>
-
+<img> https://drive.google.com/file/d/1yIN83P1yqzUJYx5tYB2uUUhDkv__LUzL/view?usp=sharing
 </html>
