--- a/17.html
+++ b/17.html
@@ -43,5 +43,5 @@
         <p class="spotify">Ty to lớn từ người ck cute s1 tgioi</p>
     </template>
 </body>
-
+<img> https://drive.google.com/file/d/1tgn6ZZJps9Ubcfomo5x9RYFFKsozYwvj/view?usp=sharing 
 </html>
