--- a/13.html
+++ b/13.html
@@ -36,7 +36,7 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">(9697: mkhoa 3): Con yêu bà nhiều lắm ạ, bà là người con yêu quý nhất trong nhà mong bà ngày quốc tế phụ nữ thật nhiều sức khoẻ, hạnh phúc ạ/p>
+            <p id="letter"> Con yêu bà nhiều lắm ạ, bà là người con yêu quý nhất trong nhà mong bà ngày quốc tế phụ nữ thật nhiều sức khoẻ, hạnh phúc ạ/p>
         </div>
     </template>
     <template id="spotify-bootleg">
