--- a/13.html
+++ b/13.html
@@ -32,7 +32,7 @@
             </svg>
         </div>
     </div>
-    <script src="heart.js" defer></script>
+    <script src="13.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
