--- a/12.html
+++ b/12.html
@@ -36,12 +36,14 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">(9696: mkhoa 2): Luôn hạnh phúc ngày càng xinh đẹp giảm đc nhiều cân, hẹn gái iu của t ngày cùng học đại học trên Hà Nội</p>
+            <p id="letter">Luôn hạnh phúc ngày càng xinh đẹp giảm đc nhiều cân, hẹn gái iu của t ngày cùng học đại học
+                trên Hà Nội</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">9696( đơn thứ 2): Quý lắm t mới tặng nhé😏</p>
+        <p class="spotify">Quý lắm t mới tặng nhé😏</p>
     </template>
 </body>
 <img> https://drive.google.com/file/d/1yIN83P1yqzUJYx5tYB2uUUhDkv__LUzL/view?usp=sharing
+
 </html>
