--- a/17.html
+++ b/17.html
@@ -36,12 +36,14 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">8/3 vui vỏe mạnh khẻ sống dai thành huyền thoại nha. T bt m thích t lâu r nên cứ tỏ tình đi đừng ngại 😳</p>
+            <p id="letter">8/3 vui vỏe mạnh khẻ sống dai thành huyền thoại nha. T bt m thích t lâu r nên cứ tỏ tình đi
+                đừng ngại 😳</p>
         </div>
     </template>
     <template id="spotify-bootleg">
         <p class="spotify">Ty to lớn từ người ck cute s1 tgioi</p>
     </template>
 </body>
-<img> https://drive.google.com/file/d/1tgn6ZZJps9Ubcfomo5x9RYFFKsozYwvj/view?usp=sharing 
+<img> https://drive.google.com/file/d/1tgn6ZZJps9Ubcfomo5x9RYFFKsozYwvj/view?usp=sharing
+
 </html>
