--- a/19.html
+++ b/19.html
@@ -36,7 +36,8 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Con nợ xinh gái 8/3 vui vẻ, tiền tài dồi dào phú quý giàu sang. Chúc gái học hành tiến bộ tri thức tinh thông nha 🤑</p>
+            <p id="letter">Con nợ xinh gái 8/3 vui vẻ, tiền tài dồi dào phú quý giàu sang. Chúc gái học hành tiến bộ tri
+                thức tinh thông nha 🤑</p>
         </div>
     </template>
     <template id="spotify-bootleg">
