--- a/6.html
+++ b/6.html
@@ -36,8 +36,12 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Gia đình là một phần rất quan trọng — là nơi mình có thể là chính mình mà không cần che giấu hay cố gắng để làm hài lòng ai. Đó là những người luôn ở bên dù mình vui hay buồn, dù mình thành công hay thất bại.
-                Gia đình tớ tuyệt vời lắm! Có một người bố - trụ cột "Học Lee" việc gì bố cũng làm được. Có một người mẹ - nóc nhà "Trinh Lee" cái gì mẹ cũng lo toan chu đáo. Có một người chị - tường nhà "Điệp Lee" thích làm mọi thứ. Có một người em - sàn nhà "Ngân Lee" đa tài
+            <p id="letter">Gia đình là một phần rất quan trọng — là nơi mình có thể là chính mình mà không cần che giấu
+                hay cố gắng để làm hài lòng ai. Đó là những người luôn ở bên dù mình vui hay buồn, dù mình thành công
+                hay thất bại.
+                Gia đình tớ tuyệt vời lắm! Có một người bố - trụ cột "Học Lee" việc gì bố cũng làm được. Có một người mẹ
+                - nóc nhà "Trinh Lee" cái gì mẹ cũng lo toan chu đáo. Có một người chị - tường nhà "Điệp Lee" thích làm
+                mọi thứ. Có một người em - sàn nhà "Ngân Lee" đa tài
                 Mong rằng chúng ta sẽ mãi yêu thương nhau nhiều nhé! </p>
         </div>
     </template>
@@ -45,5 +49,6 @@
         <p class="spotify">Gia đình đối với tớ là gì?</p>
     </template>
 </body>
-    <img src="IMG_2072 - Lee Sunny.jpeg">
+<img src="IMG_2072 - Lee Sunny.jpeg">
+
 </html>
