--- a/8.html
+++ b/8.html
@@ -36,12 +36,13 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Cảm ơn vì đã đến và bên cạnh tớ. Cậu luôn là niềm vui, niềm an ủi và là nguồn động lực của tớ. Chúc cậu luôn hạnh phúc.</p>
+            <p id="letter">Cảm ơn vì đã đến và bên cạnh tớ. Cậu luôn là niềm vui, niềm an ủi và là nguồn động lực của
+                tớ. Chúc cậu luôn hạnh phúc.</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> Hãy ở bên tớ !
-             </p>
+        <p class="spotify">Hãy ở bên tớ !
+        </p>
     </template>
 </body>
 
