--- a/13.html
+++ b/13.html
@@ -36,12 +36,13 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter"> Con yêu bà nhiều lắm ạ, bà là người con yêu quý nhất trong nhà mong bà ngày quốc tế phụ nữ thật nhiều sức khoẻ, hạnh phúc ạ</p>
+            <p id="letter">Con yêu bà nhiều lắm ạ, bà là người con yêu quý nhất trong nhà mong bà ngày quốc tế phụ nữ
+                thật nhiều sức khoẻ, hạnh phúc ạ</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">"9697: Gửi người phụ nữ của gia đình con iu🥰🥰. 
-" </p>
+        <p class="spotify">"Gửi người phụ nữ của gia đình con iu🥰🥰.
+            " </p>
     </template>
 </body>
 
