cleanup + add images

--- a/13.html
+++ b/13.html
@@ -41,8 +41,7 @@
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">"Gửi người phụ nữ của gia đình con iu🥰🥰.
-            " </p>
+        <p class="spotify">Gửi người phụ nữ của gia đình con iu🥰🥰.</p>
     </template>
 </body>
 
