--- a/14.html
+++ b/14.html
@@ -37,19 +37,20 @@
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
             <p id="letter">Gửi chị Minhh Nguyen
+                <br>
                 Nhân ngày 8/3, một ngày rất có ý nghĩa với tất cả người phụ nữ trên thế giới này, em muốn gửi đến chị
                 lời chúc trân trọng nhất và thật lòng nhất. Chúc chị càng ngày càng xinh đẹp trẻ trung, tiền vào như
-                nước, khỏe mạnh bẻ gãy sừng trâu. Chị ơi, thi đại học khó khăn vất vả nhưng chị phải nhớ ăn đủ bữa á>:(
+                nước, khỏe mạnh bẻ gãy sừng trâu. Chị ơi, thi đại học khó khăn vất vả nhưng chị phải nhớ ăn đủ bữa
+                á>:&lpar;
                 Dẹp bỏ những tiêu cực mà tự tinn và chị ngày càng yêu em Hoàng hơn:3 Chị luôn có em Hoàng cả đằng sau cả
-                đằng trước >< Khoa Minh Hoàng Người yêu chị</p>
+                đằng trước &gt;&lt; Khoa Minh Hoàng<br> Người yêu chị
+            </p>
         </div>
     </template>
     <template id="spotify-bootleg">
         <p class="spotify">Biết ngày nào còn là hai người xa lạ chẳng biết gì về nhau mà giờ chẳng hẹn lại là mảnh ghép
             tình yêu của nhau:3 Chúc chị một 8/3 khỏe mạnh trẻ trung năng động tràn ngập Hoàng &lt;333</p>
     </template>
-    <img id="ảnh" src="https://drive.google.com/file/d/1uV2-uZybBlH1GqpeDTSAqk28j-CRrcIm/view">
 </body>
-<img> https://drive.google.com/file/d/1SsE7O5Ys1IBOwSnkWTtJJkMvveS8m9Ns/view?usp=sharing
 
 </html>
