--- a/15.html
+++ b/15.html
@@ -35,8 +35,8 @@
     <div id="letter-container">
       <img id="paper" src="Paper_blank.png" />
       <p id="letter">
-        "Họ hỏi anh thế nào là hạnh phúc? Anh nhớ về năm tháng ở bên em. Nhớ
-        nụ cười, ánh mắt em dịu dàng. Nhớ vòng tay ôm xiết những đêm đông"
+        Họ hỏi anh thế nào là hạnh phúc<br> Anh nhớ về năm tháng ở bên em<br> Nhớ
+        nụ cười, ánh mắt em dịu dàng<br> Nhớ vòng tay ôm xiết những đêm đông
       </p>
     </div>
   </template>
@@ -45,7 +45,6 @@
       Chúc em 8/3 vui vẻ, hạnh phúc, nhiều niềm vui, bớt phiền muộn. Yêu em
     </p>
   </template>
-  <img src="https://drive.google.com/file/d/1yVJQRe0_lDiVKPGuCqvhIYs8cUtOCJIE/view" />
 </body>
 
 </html>
