--- a/5.html
+++ b/5.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>ICM 8/3</title>
-  <link rel="stylesheet" href="Main_page1.css" />
+  <link rel="stylesheet" href="5.css" />
   <link rel="preload" href="Paper_blank.png" as="image" crossorigin />
   <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin />
   <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin />
@@ -30,19 +30,18 @@
       </svg>
     </div>
   </div>
-  <script src="heart.js" defer></script>
+  <script src="5.js" defer></script>
   <template id="letter-template">
     <div id="letter-container">
       <img id="paper" src="Paper_blank.png" />
-      <p id="letter">
-        Cố gắng thiệt nhìu và iu bản thân mình hơn nữa nhaa Minh Châuu💗 Thế
-        giới sẽ iu Minh Châu như cách Minh Châu đang iu thế giới nàyy
-      </p>
+      <div id="inside-paper">
+        <p id="letter">
+          Cố gắng thiệt nhìu và iu bản thân mình hơn nữa nhaa Minh Châuu💗 Thế
+          giới sẽ iu Minh Châu như cách Minh Châu đang iu thế giới nàyy
+        </p>
+        <img id="customer-image" src="5.jpeg" />
+      </div>
     </div>
-  </template>
-  <template id="spotify-bootleg">
-    <p class="spotify">
-    </p>
   </template>
 </body>
 
