--- a/6.html
+++ b/6.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="Main_page1.css">
+    <link rel="stylesheet" href="6.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,23 +32,29 @@
             </svg>
         </div>
     </div>
-    <script src="heart.js" defer></script>
+    <script src="6.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Gia đình là một phần rất quan trọng — là nơi mình có thể là chính mình mà không cần che giấu
-                hay cố gắng để làm hài lòng ai. Đó là những người luôn ở bên dù mình vui hay buồn, dù mình thành công
-                hay thất bại.
-                Gia đình tớ tuyệt vời lắm! Có một người bố - trụ cột "Học Lee" việc gì bố cũng làm được. Có một người mẹ
-                - nóc nhà "Trinh Lee" cái gì mẹ cũng lo toan chu đáo. Có một người chị - tường nhà "Điệp Lee" thích làm
-                mọi thứ. Có một người em - sàn nhà "Ngân Lee" đa tài
-                Mong rằng chúng ta sẽ mãi yêu thương nhau nhiều nhé! </p>
+            <div id="inside-paper">
+                <p id="letter">Gia đình là một phần rất quan trọng — là nơi mình có thể là chính mình mà không cần che
+                    giấu
+                    hay cố gắng để làm hài lòng ai. Đó là những người luôn ở bên dù mình vui hay buồn, dù mình thành
+                    công
+                    hay thất bại.<br><br>
+                    Gia đình tớ tuyệt vời lắm! Có một người bố - trụ cột "Học Lee" việc gì bố cũng làm được. Có một
+                    người mẹ
+                    - nóc nhà "Trinh Lee" cái gì mẹ cũng lo toan chu đáo. Có một người chị - tường nhà "Điệp Lee" thích
+                    làm
+                    mọi thứ. Có một người em - sàn nhà "Ngân Lee" đa tài<br><br>
+                    Mong rằng chúng ta sẽ mãi yêu thương nhau nhiều nhé! </p>
+                <img id="customer-image" src="6.jpeg" />
+            </div>
         </div>
     </template>
     <template id="spotify-bootleg">
         <p class="spotify">Gia đình đối với tớ là gì?</p>
     </template>
 </body>
-<img src="IMG_2072 - Lee Sunny.jpeg">
 
 </html>
