--- a/9.html
+++ b/9.html
@@ -36,16 +36,18 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Chúng mình quen nhau đã lâu, đã có rất nhiều chuyện xảy ra. 
-                Nhưng sau tất cả hãy để kỉ niệm vui đồng hành cùng m những chặng đường tiếp theo. 
-                Chúc bạn mình năm mới tuổi mới vui vẻ, xinh đẹp, thành công và hơn hết ngày càng gần 
-                với hình tượng bản thân muốn trở thành nhé.</p>
+            <div id="inside-paper">
+                <p id="letter">Chúng mình quen nhau đã lâu, đã có rất nhiều chuyện xảy ra.
+                    Nhưng sau tất cả hãy để kỉ niệm vui đồng hành cùng m những chặng đường tiếp theo.
+                    Chúc bạn mình năm mới tuổi mới vui vẻ, xinh đẹp, thành công và hơn hết ngày càng gần
+                    với hình tượng bản thân muốn trở thành nhé.</p>
+                <img id="customer-image" src="9.jpg" />
+            </div>
         </div>
     </template>
     <template id="spotify-bootleg">
         <p class="spotify">Luôn vui vẻ toả sáng</p>
     </template>
-    <img id="ảnh" src="https://drive.google.com/file/d/1JGpx_QYBJxdMo463ta0CK5IzB8nU5mWl/view">
 </body>
 
 </html>
