--- a/7.html
+++ b/7.html
@@ -34,13 +34,9 @@
   <template id="letter-template">
     <div id="letter-container">
       <img id="paper" src="Paper_blank.png" />
-      <p id="letter">
-        Hôm nay là 8/3, ngày dành riêng cho những người phụ nữ – và với anh,
-        em chính là người đặc biệt nhất. Anh muốn nói với em rằng anh không
-        chỉ trân trọng em trong hôm nay, mà là từng ngày, từng giờ, từng phút,
-        từng giây.Hãy để anh là người đồng hành cùng em trên chặng đường phía
-        trước, có được không?
-      </p>
+      <div id="inside-paper">
+        <img id="customer-image" src="7.webp" />
+      </div>
     </div>
   </template>
   <template id="spotify-bootleg">
