remove spotify bootleg message

--- a/27.html
+++ b/27.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="Main_page1.css">
+    <link rel="stylesheet" href="27.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,15 +32,13 @@
             </svg>
         </div>
     </div>
-    <script src="heart.js" defer></script>
+    <script src="27.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Chúc các bạn nữ lớp 10C2 luôn xinh đẹp, rạng rỡ và tự tin. Mong rằng các bạn sẽ có một năm học thật thành công, thật nhiều niềm vui và hạnh phúc!</p>
+            <p id="letter">Chúc các bạn nữ lớp 10C2 luôn xinh đẹp, rạng rỡ và tự tin. Mong rằng các bạn sẽ có một năm
+                học thật thành công, thật nhiều niềm vui và hạnh phúc!</p>
         </div>
-    </template>
-    <template id="spotify-bootleg">
-        <p class="spotify"></p>
     </template>
 </body>
 
