--- a/24.html
+++ b/24.html
@@ -37,16 +37,22 @@
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
             <p id="letter">Thân gửi Mẹ Iu:
-                Nhân dịp 8/3 - Ngày Quốc tế Phụ Nữ, con Phương Anh và Ngân Giang chúc Mẹ iu nhất trần đời luôn mạnh khoẻ, bình an, ngày càng xinh đẹp, trẻ trung, mỗi ngày đều tràn ngập niềm vui, hạnh phúc, công việc ngày càng thuận lợi hơn nữa. Chúc Phú bà đời con ngày nào cũng luôn tươi vui, và kiếm được nhìuu tìn để mẹ con ta đi chơi vứi nhau (không thì đợi PA đi học về rùi cùng đi chơi nhé). Yêu Mẹ của chúng con nhất trên đời luôn óoo 😘
-                Lời chúc tận đáy lòng từ 2 cục vàng của Mẹ iu
+                Nhân dịp 8/3 - Ngày Quốc tế Phụ Nữ, con Phương Anh và Ngân Giang chúc Mẹ iu nhất trần đời luôn mạnh
+                khoẻ, bình an, ngày càng xinh đẹp, trẻ trung, mỗi ngày đều tràn ngập niềm vui, hạnh phúc, công việc ngày
+                càng thuận lợi hơn nữa. Chúc Phú bà đời con ngày nào cũng luôn tươi vui, và kiếm được nhìuu tìn để mẹ
+                con ta đi chơi vứi nhau (không thì đợi PA đi học về rùi cùng đi chơi nhé). Yêu Mẹ của chúng con nhất
+                trên đời luôn óoo 😘<br>
+                Lời chúc tận đáy lòng từ 2 cục vàng của Mẹ iu<br>
                 Phương Anh và Ngân Giang
-                </p>
+            </p>
         </div>
     </template>
     <template id="spotify-bootleg">
         <p class="spotify">Gửi đến người Mẹ yêu quý nhất trần đời của chúng con!
-            Hellu Mẹ iu của chúng con. Vậy là mẹ với Phương Anh đã ở bên nhau được 18 năm và với Ngân Giang được 13 năm rùi. Chúng mình đã có rất nhiều những kỷ niệm đáng nhớ bên nhau mẹ nhỉ. Và chúng con mong rằng gia đình mình sẽ cùng nhau trải qua thêm thật nhiều kỷ niệm đáng nhớ nữa😊
-            </p>
+            Hellu Mẹ iu của chúng con. Vậy là mẹ với Phương Anh đã ở bên nhau được 18 năm và với Ngân Giang được 13 năm
+            rùi. Chúng mình đã có rất nhiều những kỷ niệm đáng nhớ bên nhau mẹ nhỉ. Và chúng con mong rằng gia đình mình
+            sẽ cùng nhau trải qua thêm thật nhiều kỷ niệm đáng nhớ nữa😊
+        </p>
     </template>
 </body>
 
