--- a/18.html
+++ b/18.html
@@ -36,16 +36,11 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">"Ôy chúng mình đã chơi với nhau đc 5y rồi đấy e 💞 Chúc chúng ta mãi xinh đẹp, học giỏi, có tiền để nào về hưu mình đi du lịch 👉👈 Nhanh nhở 06/03/2020 - 06/03/2025, loại m đừng có mà cậy t trên HN mà đi tìm con khác 🫵
-
-                From: maianhhhh".</p>
+            <p id="letter">8/3 vui vẻ sức khỏe dồi dào tránh xa bệnh tật nha. Xinh gái bớt cau có đạt được nhiều thành tích nha 😘</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> "Alo Doraemon có nhà ko?
-
-            chính chú đấy HHN 
-            🫵 TÔY ĐẶC BIỆT VIẾT NHỮNG DÒNG NÀY CHO CHÚ 🫵🫵🫵 "
+        <p class="spotify"> Ty to lớn từ người ck cute s1 tgioi
              </p>
     </template>
 </body>
