--- a/28.html
+++ b/28.html
@@ -36,12 +36,14 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter"> "Nhân dịp con gà yêu của tao ra đời , trước hết anh nhắc em tuổi mới vui vẻ , hạnh phúc , nhiều tiền , 10đ tón béo , luôn xinh đẹp và ỉa mượt :)). ngày 7/6 là ngày đánh dấu tuổi 15 của trang , cx là ngày mà bạn t thi vào 10 chuyên rồi . lúc t vt ra mấy lời này thì hơi sớm hihi , tao k biết hôm 7/6 ấy sẽ ntn nma chúc gà làm bài thật tốt , lucky lucky để ăn sn với t sau thi nhé 
-                - Hồng Ngọc -"</p>
+            <p id="letter"> Nhân dịp con gà yêu của tao ra đời, trước hết anh nhắc em tuổi mới vui vẻ, hạnh phúc, nhiều tiền, 10đ tón béo, luôn xinh đẹp và ỉa mượt :)). 
+                Ngày 7/6 là ngày đánh dấu tuổi 15 của Trang, cx là ngày mà bạn t thi vào 10 chuyên rồi. Lúc t vt ra mấy lời này thì hơi sớm hihi, tao k biết hôm 7/6 ấy sẽ ntn nma chúc gà làm bài thật tốt,
+                lucky lucky để ăn sn vs t sau thi nhé.
+                - Hồng Ngọc -</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> Gửi Minh Trang tuổi 15 
+        <p class="spotify"> Gửi Minh Trang tuổi 15
              </p>
     </template>
 </body>
