--- a/28.html
+++ b/28.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="28.css">
+    <link rel="stylesheet" href="Main_page1.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,22 +32,16 @@
             </svg>
         </div>
     </div>
-    <script src="28.js" defer></script>
+    <script src="heart.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Nhân dịp con gà yêu của tao ra đời , trước hết anh nhắc em tuổi mới vui vẻ , hạnh
-                phúc , nhiều tiền , 10đ tón béo , luôn xinh đẹp và ỉa mượt :&rpar;&rpar;. ngày 7/6 là ngày
-                đánh dấu
-                tuổi 15 của trang , cx là ngày mà bạn t thi vào 10 chuyên rồi . lúc t vt ra mấy lời này thì
-                hơi sớm hihi , tao k biết hôm 7/6 ấy sẽ ntn nma chúc gà làm bài thật tốt , lucky lucky để ăn
-                sn với t sau thi nhé<br>
+            <p id="letter">Nhân dịp con gà yêu của tao ra đời , trước hết anh nhắc em tuổi mới vui vẻ , hạnh phúc , nhiều tiền , 10đ tón béo , luôn xinh đẹp và ỉa mượt :)). ngày 7/6 là ngày đánh dấu tuổi 15 của trang , cx là ngày mà bạn t thi vào 10 chuyên rồi . lúc t vt ra mấy lời này thì hơi sớm hihi , tao k biết hôm 7/6 ấy sẽ ntn nma chúc gà làm bài thật tốt , lucky lucky để ăn sn với t sau thi nhé 
                 - Hồng Ngọc -</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">Gửi Minh Trang tuổi 15
-        </p>
+        <p class="spotify">Gửi Minh Trang tuổi 15 </p>
     </template>
 </body>
 
