--- a/43.html
+++ b/43.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="38.css">
+    <link rel="stylesheet" href="43.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,15 +32,15 @@
             </svg>
         </div>
     </div>
-    <script src="38.js" defer></script>
+    <script src="43.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter"> Các boii X8 chúc cậu có một ngày 8/3 thật vui vẻ, tiếp nhận được nhiều năng lượng tích cực, hạnh phúc bên gia đình người  thân, thương nhaaa. chúc cậu tất cả mọi điều tốt đẹp trừ vất vả nhé 🫰🏻❤️</p>
+            <p id="letter">  8/3 chúc Ngố Linh vui vẻ bên gia đình và bạn bè , ngày càng xinh gái học giỏi đạt được mục tiêu của bản thân hơnnn , to u vua hải tặc tương lai 😓🤗</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> Gửi Ánh
+        <p class="spotify"> Gửi Ngô Linh
              </p>
     </template>
 </body>
