--- a/26.html
+++ b/26.html
@@ -36,21 +36,21 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">I loved you; even now I may confess,
-                Some embers of my love their fire retain;
-                But do not let it cause you more distress,
-                I do not want to sadden you again.
-                Hopeless and tongue-tied, yet I loved you dearly
-                With pangs the jealous and the timid know;
-                So tenderly I loved you, so sincerely,
+            <p id="letter">I loved you; even now I may confess,<br>
+                Some embers of my love their fire retain;<br>
+                But do not let it cause you more distress,<br>
+                I do not want to sadden you again.<br>
+                Hopeless and tongue-tied, yet I loved you dearly<br>
+                With pangs the jealous and the timid know;<br>
+                So tenderly I loved you, so sincerely,<br>
                 I pray God grant another love you so.</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">"They asked 
-            ""Do you love him to death?"" 
-            I said 
-            ""Speak of him over my grave and watch how he brings me back to life.”"</p>
+        <p class="spotify">They asked<br>
+            "Do you love him to death?"
+            I said<br>
+            "Speak of him over my grave and watch how he brings me back to life.”</p>
     </template>
 </body>
 
