--- a/31.html
+++ b/31.html
@@ -40,10 +40,10 @@
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> Tiền vô cổ nhân, hậu vô lai giả
-            Thiên thượng thiên hạ, duy ngã độc tôn
-            Thế sự hùng tồn, vững nghiệp đô
-            Thái tử anh minh, rạng cơ đồ </p>
+        <p class="spotify">Tiền vô cổ nhân, hậu vô lai giả<br>
+            Thiên thượng thiên hạ, duy ngã độc tôn<br>
+            Thế sự hùng tồn, vững nghiệp đô<br>
+            Thái tử anh minh, rạng cơ đồ</p>
     </template>
 </body>
 
