--- a/33.html
+++ b/33.html
@@ -36,12 +36,14 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Chúc Dương 8/3 vui vẻ bên gia đình và bạn bè, chúc cậu luôn học giỏi, xinh gái, luôn đạt được những mục tiêu mình đề ra nhé. Cảm ơn cậu đã luôn là người tổ trường tốt với anh tổ 3 nói riêng cũng như với cả lớp nói chung nhée🫶🏻🫰🏻💗 </p>
+            <p id="letter">Chúc Dương 8/3 vui vẻ bên gia đình và bạn bè, chúc cậu luôn học giỏi, xinh gái, luôn đạt được
+                những mục tiêu mình đề ra nhé. Cảm ơn cậu đã luôn là người tổ trường tốt với anh tổ 3 nói riêng cũng như
+                với cả lớp nói chung nhée🫶🏻🫰🏻💗</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify"> Gửi Thuỳ Dương
-             </p>
+        <p class="spotify">Gửi Thuỳ Dương
+        </p>
     </template>
 </body>
 
