--- a/49.html
+++ b/49.html
@@ -36,11 +36,14 @@
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Cảm ơn em vì đã luôn ở bên, động viên anh trong thời gian qua.Cảm ơn em vì đã tiếp them cho anh động lực, tìm lại được niềm đam mê của mình.Anh cảm thấy mình thật may mắn khi được đồng hành cùng em.Chúc em 8/3 thật vui vẻ, hạnh phúc, luôn yêu đời và thành công trong mọi cuộc thi, đạt được ước mơ của mình. <3</p>
+            <p id="letter">Cảm ơn em vì đã luôn ở bên, động viên anh trong thời gian qua.Cảm ơn em vì đã tiếp them cho
+                anh động lực, tìm lại được niềm đam mê của mình.Anh cảm thấy mình thật may mắn khi được đồng hành cùng
+                em.Chúc em 8/3 thật vui vẻ, hạnh phúc, luôn yêu đời và thành công trong mọi cuộc thi, đạt được ước mơ
+                của mình. &lt;3</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">Gửi lit xinh gái, cuti nhất tg <3</p>
+        <p class="spotify">Gửi lit xinh gái, cuti nhất tg <3< /p>
     </template>
 </body>
 
