--- a/51.html
+++ b/51.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="23.css">
+    <link rel="stylesheet" href="49.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,18 +32,20 @@
             </svg>
         </div>
     </div>
-    <script src="23.js" defer></script>
+    <script src="heart.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Manh chúc bốn mẹ con mình Quốc Tế Phụ Nữ vui vẻ, hạnh phúc, bíp bín thì học được >2đ, mẹ thì
-                xinh đẹp, và ngày nào cũng nhớ đến Manh (hoặc vài ngày) 💞💞💞 </p>
+            <p id="letter">Gửi bae của tui !!<br>
+                Chúc em bé của tui 8/3 luôn hạnh phúc, siu siuu xinh đẹp và phải yêu bản thân mình, đặc biệt là yêu tuii
+                thiệt nhiềuu đó. Cảm ơn em bé vì đã khiến mỗi ngày của tuii trở nên đáng iu như vậy, cảm ơn em bé vì đã
+                yêu tui nhiều đến thế, cảm ơn em bé vì đã luôn cố gắng vì bọn mình, cảm ơn em bé vì đã lắng nghe, lo
+                lắng cho tui. Cảm ơn vì đã để tui yêu em nhiều đến vậy. Tui trân trọng tình cảm của bọn mình lắm í. Nên
+                là bae đừng lo, 咱们永远都在一起。Cùng nhau đón thêm nhiều 8/3 nữa nhe. Yêu em ♡</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">Úi hôm nay là ngày gì nhỏ??
-            Nhân ngày 8/3, tuy Manh đang lăn lóc ở Vitri nên không về được nhưng mà
-        </p>
+        <p class="spotify">Món quà nhỏ xinh gửi tới bae của tui🥹💗</p>
     </template>
 </body>
 
