--- a/20.html
+++ b/20.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="23.css">
+    <link rel="stylesheet" href="19.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,18 +32,16 @@
             </svg>
         </div>
     </div>
-    <script src="23.js" defer></script>
+    <script src="heart.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Manh chúc bốn mẹ con mình Quốc Tế Phụ Nữ vui vẻ, hạnh phúc, bíp bín thì học được >2đ, mẹ thì
-                xinh đẹp, và ngày nào cũng nhớ đến Manh (hoặc vài ngày) 💞💞💞 </p>
+            <p id="letter">Chúc người con gái năm ấy 8/3 vui vẻ, đạt được nhiều thành tích cao trong học tập nha. Chúc
+                em và "người con trai ấy" đón tết 2026 vui vẻ 😌</p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">Úi hôm nay là ngày gì nhỏ??
-            Nhân ngày 8/3, tuy Manh đang lăn lóc ở Vitri nên không về được nhưng mà
-        </p>
+        <p class="spotify">Ty to lớn từ người ck cute s1 tgioi</p>
     </template>
 </body>
 
