--- a/30.html
+++ b/30.html
@@ -5,7 +5,7 @@
     <title>
         ICM 8/3
     </title>
-    <link rel="stylesheet" href="23.css">
+    <link rel="stylesheet" href="29.css">
     <link rel="preload" href="Paper_blank.png" as="image" crossorigin>
     <link rel="preload" href="HLT Gioviale.ttf" as="font" crossorigin>
     <link rel="preload" href="SpotifyMixUI Regular.ttf" as="font" crossorigin>
@@ -32,18 +32,25 @@
             </svg>
         </div>
     </div>
-    <script src="23.js" defer></script>
+    <script src="heart.js" defer></script>
     <template id="letter-template">
         <div id="letter-container">
             <img id="paper" src="Paper_blank.png">
-            <p id="letter">Manh chúc bốn mẹ con mình Quốc Tế Phụ Nữ vui vẻ, hạnh phúc, bíp bín thì học được >2đ, mẹ thì
-                xinh đẹp, và ngày nào cũng nhớ đến Manh (hoặc vài ngày) 💞💞💞 </p>
+            <p id="letter">Kính gửi 🐷 đại nhân,<br><br>
+
+                Hôm nay, nhân dịp mừng thọ 16 tuổi của cụ, con xin kính chúc cụ sức khỏe dồi dào, luôn vui vẻ, hạnh phúc
+                bên gia đình và con cháu. Mong cụ mãi là chỗ dựa tinh thần quý giá, là ngọn lửa ấm áp cho cả
+                nhà.<br><br>
+
+                Chúc cụ thêm tuổi mới tràn đầy niềm vui và may mắn!<br><br>
+
+                Trân trọng,<br>
+                😼-san
+            </p>
         </div>
     </template>
     <template id="spotify-bootleg">
-        <p class="spotify">Úi hôm nay là ngày gì nhỏ??
-            Nhân ngày 8/3, tuy Manh đang lăn lóc ở Vitri nên không về được nhưng mà
-        </p>
+        <p class="spotify">Con lợn cà chua elgipiti 🏳️‍🌈🐷🍅</p>
     </template>
 </body>
 
